# Surf-Height-Prediction-2

./: .claudeignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  FORECASTING_PLAYBOOK.md  README.hybrid.md  README.md  experiments.jsonl  pyproject.toml  requirements.txt
.claude/: check_claude_md.py  settings.json
notebooks/: baseline_diagnostics.py  baselines.py  buoy_correlation.py  buoy_eda.py  confirm.py  eda_wave.py  eda_wind.py  era_diagnostics.py  feature_ablation.py  feature_ablation_report.py  feature_screen.py  forecast_comparison.ipynb  forecast_v2.py  horizon_sweep.py  lasso_ablation.py  lead_lag.py  linear_playground.py  make_figures.py  mooloolaba_brisbane_forecast.py  mooloolaba_brisbane_lstm.py  mooloolaba_wind_forecast.py  multi_buoy_forecast.py  prediction.ipynb  recommended_sweep.py  seasonality.py  select_backtest.py  seq_playground.py  seq_sweep.py  tcn_probe.py  tide_residual_check.py  visualization.ipynb  wave_data_unification.ipynb  wave_eda.py  wave_wind_eda.py  wind_eda.py  wind_wave_eda.py
src/forecast/: __init__.py  ablation.py  baselines.py  config.py  constants.py  data.py  evaluate.py  experiments.py  features.py  metrics.py  models.py  neural.py  preprocess.py  runlog.py  scoring.py  splits.py  targets.py  windows.py
src/forecast/backtest/: __init__.py
src/qld_ckan/: __init__.py  __main__.py
src/qld_ckan/wave/: __init__.py  constants.py  downloader.py  pipeline.py
src/qld_ckan/wind/: constants.py  downloader.py  pipeline.py
src/tests/: conftest.py  test_backtest.py  test_baselines.py  test_build_design.py  test_data_glob.py  test_downloader.py  test_evaluate_logging_roundtrip.py  test_experiments.py  test_features_leakage.py  test_forecast.py  test_metrics.py  test_models_schema.py  test_neural.py  test_neural_residual.py  test_persistence_baseline_matches_documented_values.py  test_pipeline.py  test_runlog.py  test_splits.py  test_targets_leakage.py  test_wind_data.py
src/viz/: __init__.py  _style.py  correlation.py  diagnostics.py  eda.py  results.py  timeseries.py
src/wave_data/: __main__.py  constants.py  downloader.py  pipeline.py
src/wind_data/: __main__.py  constants.py  downloader.py  pipeline.py
