[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wave-data"
version = "0.1.0"
description = "Surf-height forecasting from QLD CKAN feeds: wave buoys + AWS wind under qld_ckan, modelling under forecast, plotting under viz."
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.3",
    "requests>=2.32",
]

# The full env (matplotlib, seaborn, torch, scikit-learn, pytest) is pinned in
# requirements.txt and is the documented install path. ``pip install -e .``
# alone gives you the ETL packages; the rest comes from requirements.txt.

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]
