[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wave-data"
version = "0.1.0"
description = "Surf-height forecasting from QLD CKAN feeds: wave buoys + AWS wind under qld_ckan, modelling under forecast, plotting under viz."
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.3",
    "requests>=2.32",
    "scikit-learn>=1.7",
]

[project.optional-dependencies]
forecast = ["torch>=2.11,<2.12"]
viz = [
    "matplotlib>=3.10",
    "seaborn>=0.13",
]

[dependency-groups]
dev = ["pytest>=9.0"]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]
